[package]
name = "pump"
version = "0.1.0"
description = "Pump.fun Anchor IDL & CPI Library"
edition = "2021"
repository = "https://github.com/s6nqou/pump-anchor"

[lib]
crate-type = ["cdylib", "lib"]
name = "pump"

[features]
default = ["cpi"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["event-cpi"] }
anchor-spl = { version = "0.30.1" }
mpl-token-metadata = "5.1.0"
